// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading snapshot rending test renders correctly with default props 1`] = `
<div
  className="error"
>
  <div
    className="message"
  >
    
  </div>
  <div
    className="stack"
  >
    
  </div>
</div>
`;

exports[`Loading snapshot rending test renders correctly with my setting props 1`] = `
<div
  className="error"
>
  <div
    className="message"
  >
    加载中
  </div>
  <div
    className="stack"
  >
    sdfsad
  </div>
</div>
`;
